--- a/src/main/resources/web/home.mustache
+++ b/src/main/resources/web/home.mustache
@@ -18,6 +18,7 @@
 
         <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script src="//code.createjs.com/easeljs-0.8.2.min.js"></script>
-        <script type="text/javascript" src="/main.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script type="text/javascript" src="/js/main.js"></script>
     </body>
 </html>
