--- a/src/main/resources/web/home.mustache
+++ b/src/main/resources/web/home.mustache
@@ -11,14 +11,15 @@
             <input id="userNameField" type="text" name="userName" required="required" value="Dakota" />
             <br />
             <input type="submit" value="Run Analysis" />
-            <span class="loading" style="display:none">Loading...</span>
+            <span class="loading" style="display:none">Analysing...</span>
         </form>
 
         <canvas id="villageImage" width="880" height="880"></canvas>
 
         <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script src="//code.createjs.com/easeljs-0.8.2.min.js"></script>
+        <script src="//code.createjs.com/preloadjs-0.6.2.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script type="text/javascript" src="/js/main.js"></script>
+        <script type="text/javascript" src="/assets/main.js"></script>
     </body>
 </html>
