--- a/src/main/resources/web/assets/main.css
+++ b/src/main/resources/web/assets/main.css
@@ -7,3 +7,28 @@
 .panel .glyphicon-remove-sign {
     color: #dd4444;
 }
+.panel .toggle-header {
+    display: none;
+    float: right;
+    color: #dd4444;
+    font-size: 12px;
+}
+.panel.failed .toggle-header.do-show {
+    display: block;
+}
+.panel.failed .toggle-header.do-hide {
+    display: none;
+}
+.panel.failed.active .toggle-header.do-show {
+    display: none;
+}
+.panel.failed.active .toggle-header.do-hide {
+    display: block;
+}
+
+.panel .panel-heading {
+    cursor: pointer;
+}
+.panel .panel-heading:hover a {
+    text-decoration: underline;
+}
