--- a/src/main/resources/web/war-bases.mustache
+++ b/src/main/resources/web/war-bases.mustache
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bulk War Bases Analysis</title>
+        <title>{{ name }} Bulk War Bases Analysis</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
         <style type="text/css">
-            tr.fail {
-                background: #ffcccc;
-            }
             .glyphicon-remove-sign {
                 color: #ff5555;
             }
@@ -17,19 +14,47 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Bulk War Bases Analysis</h3>
-                    <div id="results">
-
+                    <h3>{{name}} Bulk War Bases Analysis</h3>
+                    <div id="loading"></div>
+                    <div id="problems" style="display:none">
+                        <h4>Problems</h4>
                     </div>
+                    <div id="results"></div>
                 </div>
             </div>
         </div>
 
+        <script id="town-hall-container-template" type="x-tmpl-mustache">
+            <div id="[[containerId]]">
+                <h3>Town Hall [[level]]</h3>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>IGN</th>
+                            <th>Analysis</th>
+                            [[#rules]]
+                                <th data-rule="[[.]]" class="result-col col-[[.]]">[[.]]</th>
+                            [[/rules]]
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </script>
+
+        <script type="text/javascript">
+            var players = [
+                {{#players}}
+                    { "id": "{{id}}", "ign": "{{ign}}" },
+                {{/players}}
+            ];
+        </script>
         <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="/assets/js/console-polyfill.js"></script>
-        <script type="text/javascript" src="/assets/js/mainWarBases.js"></script>
+        <script type="text/javascript" src="/assets/js/war-bases/main.js"></script>
     </body>
 </html>
