Enhancements and clan landing page

--- a/src/main/resources/web/war-bases.mustache
+++ b/src/main/resources/web/war-bases.mustache
@@ -76,7 +76,7 @@
         <script type="text/javascript">
             var players = [
                 {{#players}}
-                    { "id": "{{id}}", "ign": "{{ign}}" },
+                    { "id": "{{id}}", "ign": "{{ign}}", "analysisUrl": "{{analysisUrl}}" },
                 {{/players}}
             ];
         </script>
