--- a/src/main/resources/web/war-bases.mustache
+++ b/src/main/resources/web/war-bases.mustache
@@ -56,7 +56,7 @@
                         </div>
                     </div>
 
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-hover">
                         <thead>
                             <tr>
                                 <th>IGN</th>
