General app flow refactoring and performance improvements

--- a/src/main/resources/web/war-bases.mustache
+++ b/src/main/resources/web/war-bases.mustache
@@ -74,6 +74,9 @@
         </script>
 
         <script type="text/javascript">
+            var clan = {
+                "code": "{{code}}"
+            };
             var players = [
                 {{#players}}
                     { "id": "{{id}}", "ign": "{{ign}}", "analysisUrl": "{{analysisUrl}}" },
