--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>War Base Analyser</title>
+        <title>War Base Analysis - {{clanName}} - {{playerIgn}}</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/assets/main.css" />
@@ -10,32 +10,16 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>War Base Analyser</h3>
-                    <p>Search for an IGN (can only be within the approved clans) and an analysis will be run on their active village</p>
+                    <h3>War Base Analysis - {{clanName}} - {{playerIgn}}</h3>
                     <div class="alert alert-info">
                         <strong>Note!</strong> this is an alpha release. The connection to the game is a bit unreliable
                         and you might need to refresh sometimes to try it again and get it to work. Hidden Teslas and
                         traps are not yet implemented, this will be available soon. Any feedback or bug reports are much
                         appreciated
                     </div>
-                    <form id="searchForm" class="form-inline">
-                        <div class="form-group">
-                            <label for="userNameField">IGN:</label>
-                            <input id="userNameField" class="form-control" type="text" name="userName" required="required" value="" />
-                        </div>
-                        <div class="form-group">
-                            <label>Layout:</label>
-                            <label class="radio-inline">
-                                <input name="layout" type="radio" class="form-control" id="layoutHome" value="home" checked="checked" /> Home
-                            </label>
-                            <label class="radio-inline">
-                                <input name="layout" type="radio" class="form-control" id="layoutWar" value="war" /> War
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-default">Run Analysis</button>
-                        </div>
-                    </form>
+                    {{#warning}}
+                        <div class="alert alert-warning">{{warning}}</div>
+                    {{/warning}}
                 </div>
             </div>
 
@@ -51,34 +35,36 @@
         </div>
 
         <script id="result-panel" type="x-tmpl-mustache">
-            <div id="panel-{{id}}" class="panel panel-default {{#success}}success{{/success}} {{^success}}failed{{/success}}">
-                <div class="panel-heading" role="tab" id="heading-{{id}}"  role="button" class="collapsed" data-toggle="collapse" data-parent="#results-panel-group" href="#collapse-{{id}}" aria-expanded="false" aria-controls="collapse-{{id}}">
+            <div id="panel-[[id]]" class="panel panel-default [[#success]]success[[/success]] [[^success]]failed[[/success]]">
+                <div class="panel-heading" role="tab" id="heading-[[id]]"  role="button" class="collapsed" data-toggle="collapse" data-parent="#results-panel-group" href="#collapse-[[id]]" aria-expanded="false" aria-controls="collapse-[[id]]">
                     <h4 class="panel-title">
-                        {{#success}}
+                        [[#success]]
                             <span class="glyphicon glyphicon-ok-sign"></span>
-                        {{/success}}
-                        {{^success}}
+                        [[/success]]
+                        [[^success]]
                             <span class="glyphicon glyphicon-remove-sign"></span>
-                        {{/success}}
+                        [[/success]]
                         <a href="#">
-                            {{title}}
+                            [[title]]
                         </a>
                         <a class="do-show">show me</a>
                     </h4>
                 </div>
-                <div id="collapse-{{id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-{{id}}" data-rule-name="{{ruleName}}">
-                    <div class="panel-body">{{description}}</div>
+                <div id="collapse-[[id]]" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-[[id]]" data-rule-name="[[ruleName]]">
+                    <div class="panel-body">[[description]]</div>
                 </div>
             </div>
         </script>
 
+        <script type="text/javascript">
+            var report = {{{report}}};
+        </script>
         <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/js-signals/1.0.0/js-signals.min.js"></script>
         <script type="text/javascript" src="//code.createjs.com/easeljs-0.8.2.min.js"></script>
         <script type="text/javascript" src="//code.createjs.com/preloadjs-0.6.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jStorage/0.4.12/jstorage.min.js"></script>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="/assets/js/console-polyfill.js"></script>
         <script type="text/javascript" src="/assets/js/base-analysis/preloader.js"></script>
