--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -1,39 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>War Base Analysis - {{clanName}} - {{playerIgn}}</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+{{<base}}
+    {{$title}}{{clanName}} - {{playerIgn}} - {{layoutDescription}}{{/title}}
+
+    {{$heading}}{{clanName}} - {{playerIgn}} - {{layoutDescription}}{{/heading}}
+
+    {{$styles}}
         <link rel="stylesheet" type="text/css" href="/assets/main.css" />
-    </head>
-    <body>
-        <div class="container-fluid">
+    {{/styles}}
+
+
+    {{$content}}
+        {{#warning}}
             <div class="row">
                 <div class="col-md-12">
-                    <h3>War Base Analysis - {{clanName}} - {{playerIgn}}</h3>
-                    <div class="alert alert-info">
-                        <strong>Note!</strong> this is an alpha release. The connection to the game is a bit unreliable
-                        and you might need to refresh sometimes to try it again and get it to work. Hidden Teslas and
-                        traps are not yet implemented, this will be available soon. Any feedback or bug reports are much
-                        appreciated
-                    </div>
-                    {{#warning}}
-                        <div class="alert alert-warning">{{warning}}</div>
-                    {{/warning}}
+                    <div class="alert alert-warning">{{warning}}</div>
                 </div>
             </div>
+        {{/warning}}
 
-            <div id="report" class="row">
-                <div class="col-md-3">
-                    <h4>Results</h4>
-                    <div id="results-panel-group" class="panel-group" role="tablist" aria-multiselectable="false"></div>
-                </div>
-                <div class="col-md-9" id="map-container">
-                    <canvas id="villageImage"></canvas>
-                </div>
+        <div id="report" class="row">
+            <div class="col-md-3">
+                <h4>Results</h4>
+                <div id="results-panel-group" class="panel-group" role="tablist" aria-multiselectable="false"></div>
+            </div>
+            <div class="col-md-9" id="map-container">
+                <canvas id="villageImage"></canvas>
             </div>
         </div>
+    {{/content}}
 
+    {{$scripts}}
         <script id="result-panel" type="x-tmpl-mustache">
             <div id="panel-[[id]]" class="panel panel-default [[#success]]success[[/success]] [[^success]]failed[[/success]]">
                 <div class="panel-heading" role="tab" id="heading-[[id]]"  role="button" class="collapsed" data-toggle="collapse" data-parent="#results-panel-group" href="#collapse-[[id]]" aria-expanded="false" aria-controls="collapse-[[id]]">
@@ -59,13 +54,11 @@
         <script type="text/javascript">
             var report = {{{report}}};
         </script>
-        <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/js-signals/1.0.0/js-signals.min.js"></script>
         <script type="text/javascript" src="//code.createjs.com/easeljs-0.8.2.min.js"></script>
         <script type="text/javascript" src="//code.createjs.com/preloadjs-0.6.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
-        <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="/assets/js/console-polyfill.js"></script>
         <script type="text/javascript" src="/assets/js/base-analysis/preloader.js"></script>
         <script type="text/javascript" src="/assets/js/base-analysis/model.js"></script>
@@ -76,5 +69,5 @@
         <script type="text/javascript" src="/assets/js/base-analysis/mapDisplay2d.js"></script>
         <script type="text/javascript" src="/assets/js/base-analysis/ui.js"></script>
         <script type="text/javascript" src="/assets/js/base-analysis/main.js"></script>
-    </body>
-</html>
+    {{/scripts}}
+{{/base}}
