--- a/src/main/resources/web/clan.mustache
+++ b/src/main/resources/web/clan.mustache
@@ -1,37 +1,38 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{{ name }}</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>{{name}}</h3>
-                </div>
-            </div>
+{{<base}}
+    {{$title}}{{ name }}{{/title}}
 
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>Bulk Analysis</h4>
-                    <a href="{{bulkAnalysisUrl}}" target="_blank">{{bulkAnalysisUrl}}</a>
-                </div>
-            </div>
+    {{$heading}}{{ name }}{{/heading}}
 
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>Current Players</h4>
-                    <ul>
-                        {{#players}}
-                            <li>{{ign}} - <a href="{{analysisUrl}}" target="_blank">{{analysisUrl}}</a></li>
-                        {{/players}}
-                    </ul>
-                </div>
+    {{$content}}
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Bulk Analysis</h4>
+                <a href="{{bulkAnalysisUrl}}" target="_blank">{{bulkAnalysisUrl}}</a>
             </div>
         </div>
-        <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
-        <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    </body>
-</html>
+
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Current Players</h4>
+                <table class="table table-hover table-condensed">
+                    <thead>
+                        <tr>
+                            <th>IGN</th>
+                            <th>Base Analysis - Active War</th>
+                            <th>Base Analysis - Home</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#players}}
+                            <tr>
+                                <td>{{ign}}</td>
+                                <td><a href="{{warAnalysisUrl}}" target="_blank">{{warAnalysisUrl}}</a></td>
+                                <td><a href="{{homeAnalysisUrl}}" target="_blank">{{homeAnalysisUrl}}</a></td>
+                            </tr>
+                        {{/players}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {{/content}}
+{{/base}}
