Labelling overhaul for analysis rules

--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -45,7 +45,7 @@
                         <a class="do-show">show me</a>
                     </h4>
                 </div>
-                <div id="collapse-[[id]]" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-[[id]]" data-rule-name="[[ruleName]]">
+                <div id="collapse-[[id]]" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-[[id]]" data-rule-code="[[ruleCode]]">
                     <div class="panel-body">[[description]]</div>
                 </div>
             </div>
