--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -4,7 +4,7 @@
     {{$heading}}{{clanName}} - {{playerIgn}} - {{layoutDescription}}{{/heading}}
 
     {{$styles}}
-        <link rel="stylesheet" type="text/css" href="/assets/main.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/base-analysis.css" />
     {{/styles}}
 
 
@@ -19,7 +19,6 @@
 
         <div id="report" class="row">
             <div class="col-md-3">
-                <h4>Results</h4>
                 <div id="results-panel-group" class="panel-group" role="tablist" aria-multiselectable="false"></div>
             </div>
             <div class="col-md-9" id="map-container">
