--- a/src/main/resources/web/clan.mustache
+++ b/src/main/resources/web/clan.mustache
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h4>Bulk Analysis</h4>
-                <a href="{{bulkAnalysisUrl}}" target="_blank">{{bulkAnalysisUrl}}</a>
+                <a href="{{bulkAnalysisUrl}}">{{bulkAnalysisUrl}}</a>
             </div>
         </div>
 
