--- a/src/main/resources/web/war-bases.mustache
+++ b/src/main/resources/web/war-bases.mustache
@@ -78,7 +78,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
-        <script type="text/javascript" src="/assets/js/console-polyfill.js"></script>
-        <script type="text/javascript" src="/assets/js/war-bases/main.js"></script>
+        <script type="text/javascript" src="/js/console-polyfill.js"></script>
+        <script type="text/javascript" src="/js/war-bases/main.js"></script>
     {{/scripts}}
 {{/base}}
