--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -29,30 +29,22 @@
                 <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                </ul>
-            </li>
-        </ul>-->
-        <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Analysis: {{timeSecs}}s <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    {{#times}}
-                        <li>{{_1}}: {{_2}}s</li>
-                    {{/times}}
-                </ul>
-            </li>
-        </ul>
+        </form>-->
+        {{#times}}
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false"><span class="glyphicon glyphicon-time"></span> {{connection}} | {{analysis}} <span class="caret"></span></a>
+                    <table class="table table-condensed dropdown-menu">
+                        <tbody>
+                            {{#analysisRules}}
+                                <tr><td>{{_1}}</td><td>{{_2}}</td></tr>
+                            {{/analysisRules}}
+                        </tbody>
+                    </table>
+                </li>
+            </ul>
+        {{/times}}
     {{/navbar}}
 
     {{$content}}
