--- a/src/main/resources/web/base.mustache
+++ b/src/main/resources/web/base.mustache
@@ -8,7 +8,7 @@
     {{$styles}}{{/styles}}
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-inverse">
+    <nav class="navbar navbar-default navbar-inverse navbar-static-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-contents" aria-expanded="false">
@@ -24,12 +24,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Note! Early release <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li class="alert alert-info">
-                                This is an early release. The game connection is unreliable and you might need to refresh. Traps are
-                                not yet implemented. Any feedback or bug reports are much appreciated
-                            </li>
-                        </ul>
+                        <div class="dropdown-menu alert alert-info">
+                            This is an early release. The game connection is unreliable and you might need to refresh. Traps are
+                            not yet implemented. Any feedback or bug reports are much appreciated
+                        </div>
                     </li>
                 </ul>
                 {{$navbar}}{{/navbar}}
