--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -35,13 +35,18 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false"><span class="glyphicon glyphicon-time"></span> {{connection}} | {{analysis}} <span class="caret"></span></a>
-                    <table class="table table-condensed dropdown-menu">
-                        <tbody>
-                            {{#analysisRules}}
-                                <tr><td>{{_1}}</td><td>{{_2}}</td></tr>
-                            {{/analysisRules}}
-                        </tbody>
-                    </table>
+                    <div class="dropdown-menu" style="min-width:280px">
+                        {{#times}}
+                            <h5>{{_1}}</h5>
+                            <table class="table table-condensed table-bordered">
+                                <tbody>
+                                    {{#_2}}
+                                        <tr><td>{{_1}}</td><td>{{_2}}</td></tr>
+                                    {{/_2}}
+                                </tbody>
+                            </table>
+                        {{/times}}
+                    </div>
                 </li>
             </ul>
         {{/times}}
