Better times display

--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -41,7 +41,7 @@
                             <table class="table table-condensed table-bordered">
                                 <tbody>
                                     {{#_2}}
-                                        <tr><td>{{_1}}</td><td>{{_2}}</td></tr>
+                                        <tr><td class="col-md-9">{{_1}}</td><td class="col-md-3 text-right">{{_2}}</td></tr>
                                     {{/_2}}
                                 </tbody>
                             </table>
