--- a/src/main/resources/web/clan.mustache
+++ b/src/main/resources/web/clan.mustache
@@ -26,8 +26,8 @@
                         {{#players}}
                             <tr>
                                 <td>{{ign}}</td>
-                                <td><a href="{{warAnalysisUrl}}" target="_blank">{{warAnalysisUrl}}</a></td>
-                                <td><a href="{{homeAnalysisUrl}}" target="_blank">{{homeAnalysisUrl}}</a></td>
+                                <td><a href="{{warAnalysisUrl}}">{{warAnalysisUrl}}</a></td>
+                                <td><a href="{{homeAnalysisUrl}}">{{homeAnalysisUrl}}</a></td>
                             </tr>
                         {{/players}}
                     </tbody>
