--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -102,14 +102,14 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jStorage/0.4.12/jstorage.min.js"></script>
         <script type="text/javascript" src="/js/console-polyfill.js"></script>
-        <script type="text/javascript" src="/js/base-analysis/Preloader.js"></script>
-        <script type="text/javascript" src="/js/base-analysis/Model.js"></script>
+        <script type="text/javascript" src="/js/base-analysis/preloader.js"></script>
+        <script type="text/javascript" src="/js/base-analysis/model.js"></script>
         <script type="text/javascript" src="/js/base-analysis/RedMoonBuildingSpriteSheet.js"></script>
         <script type="text/javascript" src="/js/base-analysis/RedMoonBuildingSpriteSheet.js"></script>
         <script type="text/javascript" src="/js/base-analysis/RedMoonWallSpriteSheet.js"></script>
         <script type="text/javascript" src="/js/base-analysis/DisplaySettings.js"></script>
-        <script type="text/javascript" src="/js/base-analysis/MapDisplay2d.js"></script>
-        <script type="text/javascript" src="/js/base-analysis/Ui.js"></script>
+        <script type="text/javascript" src="/js/base-analysis/mapDisplay2d.js"></script>
+        <script type="text/javascript" src="/js/base-analysis/ui.js"></script>
         <script type="text/javascript" src="/js/base-analysis/main.js"></script>
     {{/scripts}}
 {{/base}}
