Add some screenshots

--- a/src/main/resources/web/base-analysis.mustache
+++ b/src/main/resources/web/base-analysis.mustache
@@ -56,10 +56,10 @@
         {{/warning}}
 
         <div id="report" class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-4">
                 <div id="results-panel-group" class="panel-group" role="tablist" aria-multiselectable="false"></div>
             </div>
-            <div class="col-md-9" id="map-container">
+            <div class="col-lg-9 col-md-8" id="map-container">
                 <canvas id="villageImage"></canvas>
             </div>
         </div>
